--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -5,17 +5,20 @@
   left: 2%;
 }
 
-#closeToggle {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
+// #closeToggle {
+//   position: absolute;
+//   top: 0;
+//   right: 0;
+// }
 
 #resize {
-  z-index: -1;
+  z-index: 2;
   position: absolute;
-  right: -4%;
-  top: 45%;
+  right: -1px;
+  top: 0;
+  bottom: 0;
+  padding: 0;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 mwlResizable {
@@ -27,11 +30,11 @@ mwlResizable {
 }
 
 .icon-bar {
-    width: 22px;
-    height: 2px;
-    background: black;
-    margin: 4px;
-    position: relative;
+  width: 22px;
+  height: 2px;
+  background: black;
+  margin: 4px;
+  position: relative;
 }
 
 header-navbar{
