--- a/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
@@ -1,3 +1,18 @@
+  <!-- search bar -->
+  <li class="nav-item">
+    <form (submit)='onSubmit(search.value)' class='form'>
+      <mat-form-field class="input">
+        <input matInput #search (keyup)='onKey(search.value)' class='form-control input' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
+        <i fas fa-search aria-hidden="true"></i>
+        <mat-label>Search</mat-label>
+      </mat-form-field>
+    </form>
+  </li>
+
+
+
+
+
 <div class="border border-secondary">
       <div id  *ngFor="let search of searches">
           <app-search [search]="search">
