--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -19,6 +19,7 @@
   bottom: 0;
   padding: 0;
   background-color: rgba(255, 255, 255, 0.8);
+  cursor: col-resize;
 }
 
 mwlResizable {
@@ -26,7 +27,7 @@ mwlResizable {
 }
 
 .btn {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .icon-bar {
