--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -40,9 +40,15 @@
         <ul class="nav nav-pills nav-fill mb-3">
             <!-- tabs menu -->
             <div class="container row " style="background-color: rgba(255, 255, 255, 1); padding-right: 0; margin-right: 0;">
-                <button mat-button class="nav-link col" routerLink='home'>Home</button>
-                <button mat-button class="nav-link col" routerLink='mytrip'>My Trip</button>
-                <button mat-button class="nav-link col" routerLink>Search</button>
+                
+                <button mat-button *ngIf='selectedTab() != "/home"' class="nav-link col" routerLink='home'>Home</button>
+                <button mat-raised-button *ngIf='selectedTab() == "/home"' class="nav-link col" routerLink='home'>Home</button>
+
+                <button mat-button *ngIf='selectedTab() != "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
+                <button mat-raised-button *ngIf='selectedTab() == "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
+
+                <button mat-button *ngIf='selectedTab() != "/search"' class="nav-link col" routerLink='search'>Search</button>
+                <button mat-raised-button *ngIf='selectedTab() == "/search"' class="nav-link col" routerLink='search'>Search</button>
 
                 <!-- new tabs feature -->
                 <!-- <app-searchbutton
