--- a/frontend/src/app/components/sidebar/header/tabs/searchresults/searchbutton/searchbutton.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/searchresults/searchbutton/searchbutton.component.html
@@ -1,8 +1,8 @@
-
+<!--
 <button mat-button class="nav-item col-auto newTab" data-toggle="pill" routerLink = {{searchTab.path}}>
     <div style="float: left;">{{searchTab.query}}</div>
     <div style="float: right; padding:  0px 10px 0px 10px;" type="button" (click)="deleteTab(searchTab)">
       <span  class="">&times;</span>
     </div>
-</button>
+</button> -->
 
