--- a/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
@@ -14,7 +14,7 @@
 
 
 <div class="border border-secondary">
-      <div id  *ngFor="let search of searches">
+      <div id  *ngFor="let result of openTab.content">
           <app-search [search]="search">
           </app-search>
   </div>
