--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -40,24 +40,24 @@
         <ul class="nav nav-pills nav-fill mb-3">
             <!-- tabs menu -->
             <div class="container row " style="background-color: rgba(255, 255, 255, 1); padding-right: 0; margin-right: 0;">
-                
+
                 <button mat-button *ngIf='selectedTab() != "/home"' class="nav-link col" routerLink='home'>Home</button>
                 <button mat-raised-button *ngIf='selectedTab() == "/home"' class="nav-link col" routerLink='home'>Home</button>
 
                 <button mat-button *ngIf='selectedTab() != "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
                 <button mat-raised-button *ngIf='selectedTab() == "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
 
-                <button mat-button *ngIf='selectedTab() != "/search"' class="nav-link col" routerLink='search'>Search</button>
-                <button mat-raised-button *ngIf='selectedTab() == "/search"' class="nav-link col" routerLink='search'>Search</button>
+                <button mat-button *ngIf='selectedTab() != "openTab.path"' class="nav-link col" [routerLink] = "[openTab.path]" >Search</button>
+                <button mat-raised-button *ngIf='selectedTab() == "openTab.path"' class="nav-link col" [routerLink] = "[openTab.path]" >Search</button>
 
                 <!-- new tabs feature -->
                 <!-- <app-searchbutton
                   *ngFor='let item of openTabs, let i = index'
                   [searchTab]='item'>
-                </app-searchbutton> 
+                </app-searchbutton>
                 <button mat-button class="nav-item col-1" data-toggle="pill" (click)='newTab()'>+</button>
                 -->
-                
+
                 <!-- hide sidebar -->
                 <button mat-button color='warn' id='closeToggle' class="close-nav nav-link" type="button" (click)="window = !window">
                     <span>
