--- a/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
@@ -15,7 +15,7 @@
 
 <div class="border border-secondary">
       <div id  *ngFor="let result of openTab.content">
-          <app-search [search]="search">
+          <app-search [result]="result">
           </app-search>
   </div>
 </div>
