--- a/frontend/src/app/components/sidebar/header/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/mytrip/mytrip.component.html
@@ -1,13 +1,26 @@
 <div class="">
-    <!-- <mat-card>
+
+    <mat-card>
         <mat-card-content>
-            New Trip
+            <div class="container-fluid row align-items-center">
+                <h1 class="col align-items-center" style="margin: 0;">New Trip</h1>
+                <button mat-mini-fab class="col-auto align-self-end">
+                    <mat-icon>add</mat-icon>
+                </button>
+            </div>
         </mat-card-content>
     </mat-card>
-    <mat-divider class=""></mat-divider> -->
+    <br>
     <mat-card class="">
+        <mat-card-title class="">Trip 1</mat-card-title>
+        <mat-card-header class="">header</mat-card-header>
         <mat-card-content class="">
-            <h1> {{ name }} </h1>
+            mat-card
         </mat-card-content>
+        <mat-card-actions class="">
+            <button mat-button>
+                save
+            </button>
+        </mat-card-actions>
     </mat-card>
 </div>
