--- a/frontend/src/app/components/sidebar/header/tabs/mytrip/mytrip.component.scss
+++ b/frontend/src/app/components/sidebar/header/tabs/mytrip/mytrip.component.scss
@@ -1,3 +1,20 @@
 button:focus {
     outline: none;
 }
+
+#lineBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#hrBtn {
+    flex: 1;
+    border: none;
+    height: 1px;
+    background: black;
+}
+
+#addIcon {
+    transform: scale(0.7);
+}
