--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
     </button>
 </div>
 
-<mat-drawer-container class='container-fluid border' style="overflow-x: hidden;" autosize >
+<mat-drawer-container class='container-fluid border' autosize>
     <mat-drawer
         mwlResizable
         [validateResize]='validate'
@@ -23,56 +23,57 @@
         #drawer
         mode="side"
         [ngStyle]='Styles'>
-
+        
         <!-- resize sidebar icon -->
-        <button
-            mwlResizeHandle
-            [resizeEdges]="{ bottom: false, right: true, top: false, left: false }"
-            id="resize"
-            class="btn border-left">
-            <span>
-                <svg class="bi bi-grip-horizontal" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7 2a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                </svg>
-            </span>
-        </button>
+        <div>
+            <button
+                mwlResizeHandle
+                [resizeEdges]="{ bottom: false, right: true, top: false, left: false }"
+                id="resize"
+                class="btn border-left">
+                <span>
+                    <svg class="bi bi-grip-horizontal" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M7 2a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                    </svg>
+                </span>
+            </button>
+        </div>
 
-        <ul class="nav nav-pills nav-fill mb-3" style="margin: 0;">
-            <!-- tabs menu -->
-            <div class="container row " style="background-color: rgba(255, 255, 255, 1); padding-right: 1%; margin: 0; margin-right: 1%; min-width: 100%;">
-                
-                <button mat-button *ngIf='selectedTab() != "/home"' class="nav-link col" routerLink='home'>Home</button>
-                <button mat-raised-button *ngIf='selectedTab() == "/home"' class="nav-link col" routerLink='home'>Home</button>
+        <!-- tabs menu -->
+        <div class="container row " style="background-color: rgba(255, 255, 255, 1); padding-right: 1%; margin: 0; margin-right: 1%; min-width: 100%;">
+            
+            <button mat-button *ngIf='selectedTab() != "/home"' class="nav-link col" routerLink='home'>Home</button>
+            <button mat-raised-button *ngIf='selectedTab() == "/home"' class="nav-link col" routerLink='home'>Home</button>
 
-                <button mat-button *ngIf='selectedTab() != "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
-                <button mat-raised-button *ngIf='selectedTab() == "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
+            <button mat-button *ngIf='selectedTab() != "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
+            <button mat-raised-button *ngIf='selectedTab() == "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
 
-                <button mat-button *ngIf='selectedTab() != "/searchresults"' class="nav-link col" [routerLink]="[openTab.path]" >Search</button>
-                <button mat-raised-button *ngIf='selectedTab() == "/searchresults"' class="nav-link col" [routerLink]="[openTab.path]" >Search</button>
+            <button mat-button *ngIf='selectedTab() != "/searchresults"' class="nav-link col" [routerLink]="[openTab.path]" >Search</button>
+            <button mat-raised-button *ngIf='selectedTab() == "/searchresults"' class="nav-link col" [routerLink]="[openTab.path]" >Search</button>
 
-                <!-- new tabs feature -->
-                <!-- <app-searchbutton
-                  *ngFor='let item of openTabs, let i = index'
-                  [searchTab]='item'>
-                </app-searchbutton>
-                <button mat-button class="nav-item col-1" data-toggle="pill" (click)='newTab()'>+</button>
-                -->
+            <!-- new tabs feature -->
+            <!-- <app-searchbutton
+                *ngFor='let item of openTabs, let i = index'
+                [searchTab]='item'>
+            </app-searchbutton>
+            <button mat-button class="nav-item col-1" data-toggle="pill" (click)='newTab()'>+</button>-->
+            
 
-                <!-- hide sidebar -->
-                <button mat-button color='warn' id='closeToggle' class="close-nav nav-link" type="button" (click)="window = !window">
-                    <span>
-                        <svg class="bi bi-arrow-bar-left" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M5.854 4.646a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L3.207 8l2.647-2.646a.5.5 0 0 0 0-.708z"/>
-                            <path fill-rule="evenodd" d="M10 8a.5.5 0 0 0-.5-.5H3a.5.5 0 0 0 0 1h6.5A.5.5 0 0 0 10 8zm2.5 6a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 1 0v11a.5.5 0 0 1-.5.5z"/>
-                        </svg>
-                    </span>
-                </button>
-            </div>
-            <!-- sidebar content -->
-            <div class="container-fluid" style="width: 100%; height: 500px; padding: 0; padding-top: 1%; padding-left: 0; margin-right: 2%;">
-                <router-outlet style="width: 100%;"></router-outlet>
-            </div>
-        </ul>
+            <!-- hide sidebar -->
+            <button mat-button color='warn' id='closeToggle' class="close-nav nav-link" type="button" (click)="window = !window">
+                <span>
+                    <svg class="bi bi-arrow-bar-left" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M5.854 4.646a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L3.207 8l2.647-2.646a.5.5 0 0 0 0-.708z"/>
+                        <path fill-rule="evenodd" d="M10 8a.5.5 0 0 0-.5-.5H3a.5.5 0 0 0 0 1h6.5A.5.5 0 0 0 10 8zm2.5 6a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 1 0v11a.5.5 0 0 1-.5.5z"/>
+                    </svg>
+                </span>
+            </button>
+        </div>
+        
+        <!-- sidebar content -->
+        <div class="container" style="width: 100%; height: 500px; padding: 0; padding-top: 1%; padding-left: 0; margin-right: 150px; overflow-y: auto;">
+            <router-outlet></router-outlet>
+        </div>
     </mat-drawer>
 </mat-drawer-container>
 
