--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -25,19 +25,17 @@
         [ngStyle]='Styles'>
         
         <!-- resize sidebar icon -->
-        <div>
-            <button
-                mwlResizeHandle
-                [resizeEdges]="{ bottom: false, right: true, top: false, left: false }"
-                id="resize"
-                class="btn border-left">
-                <span>
-                    <svg class="bi bi-grip-horizontal" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M7 2a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </span>
-            </button>
-        </div>
+        <button
+            mwlResizeHandle
+            [resizeEdges]="{ bottom: false, right: true, top: false, left: false }"
+            id="resize"
+            class="btn border-left">
+            <span>
+                <svg class="bi bi-grip-horizontal" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7 2a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                </svg>
+            </span>
+        </button>
 
         <!-- tabs menu -->
         <div class="container row " style="background-color: rgba(255, 255, 255, 1); padding-right: 1%; margin: 0; margin-right: 1%; min-width: 100%;">
@@ -48,8 +46,8 @@
             <button mat-button *ngIf='selectedTab() != "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
             <button mat-raised-button *ngIf='selectedTab() == "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
 
-            <button mat-button *ngIf='selectedTab() != "/searchresults"' class="nav-link col" [routerLink]="[openTab.path]" >Search</button>
-            <button mat-raised-button *ngIf='selectedTab() == "/searchresults"' class="nav-link col" [routerLink]="[openTab.path]" >Search</button>
+            <button mat-button *ngIf='selectedTab() != "/search"' class="nav-link col" [routerLink]="[openTab.path]" >Search</button>
+            <button mat-raised-button *ngIf='selectedTab() == "/search"' class="nav-link col" [routerLink]="[openTab.path]" >Search</button>
 
             <!-- new tabs feature -->
             <!-- <app-searchbutton
@@ -71,7 +69,7 @@
         </div>
         
         <!-- sidebar content -->
-        <div class="container" style="width: 100%; height: 500px; padding: 0; padding-top: 1%; padding-left: 0; margin-right: 150px; overflow-y: auto;">
+        <div class="container-fluid" style="width: 98%; max-height: 95%; padding: 0; padding-top: 1%; padding-left: 0; padding-top: 0; margin-left: 0; margin-right: 0; overflow-y: auto;">
             <router-outlet></router-outlet>
         </div>
     </mat-drawer>
