added back button and made some styling changes

--- a/frontend/src/app/components/sidebar/header/tabs/searchresults/search/search.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/searchresults/search/search.component.html
@@ -2,7 +2,7 @@
   <mat-card>
 
     <mat-card-header>
-      <mat-card-title>{{searchResult.type}} : {{searchResult.name}}</mat-card-title>
+      <mat-card-title>{{searchResult.name}}</mat-card-title>
       <mat-card-subtitle>{{searchResult.category}}</mat-card-subtitle>
     </mat-card-header>
 
