--- a/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="openTab.content" class="border border-secondary" >
+<div *ngIf="openTab.content" >
       <div id  *ngFor="let result of openTab.content">
           <app-search [result]="result">
           </app-search>
