--- a/frontend/src/app/components/venue/venue.component.html
+++ b/frontend/src/app/components/venue/venue.component.html
@@ -1,10 +1,14 @@
-<div *ngIf="content">
-<!-- {{content.categories}} -->
-<!-- {{content.contact.formattedPhone}} -->
-<!-- {{content.contact.twitter}} -->
-<!-- {{content.defaultHours.richStatus.text}} -->
-{{content.description}}
-{{content.location.address}}
-<!-- {{content.page.pageInfo}} -->
-<!-- {{(content.photos.groups)}} -->
+
+<div class="container" *ngIf="content">
+  <button mat-button (click)='goBack()' *ngIf="this.openTab.prePath">Back</button>
+  <div >
+  <!-- {{content.categories}} -->
+  <!-- {{content.contact.formattedPhone}} -->
+  <!-- {{content.contact.twitter}} -->
+  <!-- {{content.defaultHours.richStatus.text}} -->
+  {{content.description}}
+  {{content.location.address}}
+  <!-- {{content.page.pageInfo}} -->
+  <!-- {{(content.photos.groups)}} -->
+  </div>
 </div>
