--- a/frontend/src/app/components/tripmodal/tripmodal.component.html
+++ b/frontend/src/app/components/tripmodal/tripmodal.component.html
@@ -10,12 +10,12 @@
             <br>
             <mat-form-field >
                 <mat-label>Enter a date range</mat-label>
-                <mat-date-range-input [rangePicker]="picker" >
-                    <input matStartDate placeholder="Start date">
-                    <input matEndDate placeholder="End date">
-                </mat-date-range-input>
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-date-range-picker #picker></mat-date-range-picker>
+                <!-- <mat-date-range-input [rangePicker]="picker" > -->
+                    <!-- <input matStartDate placeholder="Start date"> -->
+                    <!-- <input matEndDate placeholder="End date"> -->
+                <!-- </mat-date-range-input> -->
+                <!-- <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle> -->
+                <!-- <mat-date-range-picker #picker></mat-date-range-picker> -->
             </mat-form-field>
         </form>
 
