--- a/frontend/src/app/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/search-bar/search-bar.component.html
@@ -1,13 +1,28 @@
-  <!-- search bar -->
-    <form (submit)='onSubmit(search.value)' class='form'>
-      <mat-form-field class="input">
-        <input matInput #search (keyup)='onKey(search.value)' class='form-control input' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
-        <i fas fa-search aria-hidden="true"></i>
-        <mat-label>Search</mat-label>
-      </mat-form-field>
-    </form>
+<!-- search bar -->
+<div class="container-fluid">
+  <form (submit)='onSubmit(search.value)' class='form row' style="width: 100%;">
+    <mat-form-field class="input col" appearance="standard">
+      <input matInput #search 
+        (keyup)='onKey(search.value)'
+        class='form-control input' 
+        type='search'
+        placeholder='ex: restaurant'
+        aria-label='Search' 
+        autocomplete='off'>
+      <i fas fa-search aria-hidden="true"></i>
+      <mat-label>Search</mat-label>
+    </mat-form-field>
+    <mat-form-field class="col-auto align-self-center">
+      <mat-label>Filter</mat-label>
+      <mat-select>
+        <mat-option value="all">All</mat-option>
+        <mat-option value="venues">Venues</mat-option>
+        <mat-option value="users">Users</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </form>
+</div>
 
 
 
-
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
