--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -30,8 +30,9 @@
         </button>
 
         <!-- tabs menu -->
-        <div class="container row " style="background-color: rgba(255, 255, 255, 1); padding-right: 1%; margin: 0; margin-right: 1%; min-width: 100%;">
-
+        <div class="container row border-bottom"
+            style="background-color: rgba(255, 255, 255, 1); padding-right: 1%; margin: 0; margin-right: 1%; min-width: 100%;">
+            
             <button mat-button *ngIf='selectedTab() != "/home"' class="nav-link col" routerLink='home'>Home</button>
             <button mat-raised-button *ngIf='selectedTab() == "/home"' class="nav-link col" routerLink='home'>Home</button>
 
