--- a/frontend/src/app/components/venue/venue.component.html
+++ b/frontend/src/app/components/venue/venue.component.html
@@ -1,14 +1,12 @@
-
-<div class="container" *ngIf="content">
-  <button mat-button (click)='goBack()' *ngIf="this.openTab.prePath">Back</button>
-  <div >
-  <!-- {{content.categories}} -->
-  <!-- {{content.contact.formattedPhone}} -->
-  <!-- {{content.contact.twitter}} -->
-  <!-- {{content.defaultHours.richStatus.text}} -->
-  {{content.description}}
-  {{content.location.address}}
-  <!-- {{content.page.pageInfo}} -->
-  <!-- {{(content.photos.groups)}} -->
-  </div>
-</div>
+<mat-card class="container" *ngIf="content">
+  <mat-card-content class="">
+    <button mat-button (click)='goBack()' *ngIf="this.openTab.prePath">Back</button>
+    <div >
+      <ul >
+        <li *ngFor='let pair of content | keyvalue'>
+          {{ pair.key }}: {{ pair.value }}
+        </li>
+      </ul>
+    </div>
+  </mat-card-content>
+</mat-card>
