added venue controls

--- a/frontend/src/app/components/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/tabs/mytrip/mytrip.component.html
@@ -28,7 +28,7 @@
                     <div id="lineBtn">
                         <hr id="hrBtn">
                         <button mat-mini-fab id="addIcon">
-                            <mat-icon id='addIcon'>add</mat-icon>
+                            <mat-icon id='addIcon'>add_location</mat-icon>
                         </button>
                         <hr id="hrBtn">
                     </div>
