--- a/frontend/src/app/components/tripmodal/tripmodal.component.html
+++ b/frontend/src/app/components/tripmodal/tripmodal.component.html
@@ -1,7 +1,7 @@
 <mat-card class="container-fluid">
-    <mat-card-title> New Trip </mat-card-title>
+    <mat-card-title mat-dialog-title> New Trip </mat-card-title>
     <hr>
-    <mat-card-content class="container-fluid">
+    <mat-card-content mat-dialog-content class="container-fluid">
         <form>
             <mat-form-field class="example-full-width">
                 <mat-label>Trip Name</mat-label>
@@ -20,7 +20,7 @@
         </form>
 
     </mat-card-content>
-    <mat-card-actions>
+    <mat-card-actions mat-dialog-actions>
         <button mat-button>Cancel</button>
         <button mat-button color='primary'>Save</button>
     </mat-card-actions>
