--- a/frontend/src/app/components/venue/venue.component.scss
+++ b/frontend/src/app/components/venue/venue.component.scss
@@ -1,4 +1,11 @@
 button:focus {
     outline: none;
 }
-  
+#img{
+  width: auto;
+  height: 100%;
+}
+#imgTile{
+  background-color: rgba($color: #2c2222, $alpha: 1.0);
+}
+
