--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div id="main" class="border border-secondary rounded">
+<div id="main" class="container-fluid rounded">
 
     <!-- after fetching data -->
     <div *ngIf='User'>
