--- a/frontend/src/app/components/registration-process/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/components/registration-process/registrationpage/registrationpage.component.html
@@ -88,7 +88,7 @@
             ngbDatepicker 
             #d="ngbDatepicker">
           <button
-            id='calendar'
+            id='calendarSelector'
             class="btn btn-outline-secondary calendar input-group-append rounded-0"
             (click)="d.toggle()" type="button">
             <mat-icon>calendar_today</mat-icon>
