--- a/frontend/src/app/components/profile/profile.component.scss
+++ b/frontend/src/app/components/profile/profile.component.scss
@@ -1,13 +1,13 @@
 #main {
-    position: absolute;
+    // position: absolute;
     z-index: 2;
-    top: 2px;
+    // top: 2px;
     background-color: rgba(255,255,255, $alpha: 0.9);
     padding-left: 1%;
     padding-right: 1%;
-    top: 20%;
-    left: 25%;
-    right: 25%;
+    // top: 20%;
+    // left: 25%;
+    // right: 25%;
 }
 
 .btn {
