--- a/frontend/src/app/components/tripmodal/tripmodal.component.html
+++ b/frontend/src/app/components/tripmodal/tripmodal.component.html
@@ -6,7 +6,7 @@
             <mat-form-field class="example-full-width">
                 <mat-label>Trip Name</mat-label>
                 <input matInput formControlName='name' placeholder="Ex. Simon va a Prague" [(ngModel)]="data.name">
-                <small *ngIf='this.modalForm.get("name").touched && !this.modalForm.get("name").valid' class="text-danger">please enter a name</small>
+                <small *ngIf='this.modalForm.get("name").touched && !this.modalForm.get("name").valid' class="text-danger">{{ modalForm.get('name').errors }}</small>
               </mat-form-field>
             <br>
             <mat-form-field >
